@@ -30,7 +30,7 @@
     No Autodetection features available, since it is a network printer
   </autodetect>
   <functionality>A</functionality>
-  <driver>PostScript</driver>
+  <driver>Postscript</driver>
   <comments>
     <en>
       <!-- No comments -->
