@@ -30,7 +30,7 @@
     No Autodetection features available, since it is a network printer
   </autodetect>
   <functionality>A</functionality>
-  <driver>PostScript</driver>
+  <driver>Postscript</driver>
   <comments>
     <en>
       &lt;b&gt;Networks bring together formerly distinct print environments, like central IT, printroom andthe office. But how can your enterprise capitalise on network printing in these environments? The Power Print Controller can help. Its unique design handles multiple printstreams from a variety of environments totally independently of host, network andapplication. All that, in one intelligent controller.&lt;/b&gt;&lt;br/&gt;
