@@ -6,6 +6,9 @@
 	  printer IDs of the new OCE printer entries, the printer IDs have
 	  to be given here, not the filenames.
 
+	* printer/Oce-*PS.xml: Corrected recommended driver name:
+	  "PostScript" --> "Postscript".
+
 2005-06-14  Bram Voss <bvos@oce.nl>
 Removed the following printers for Oce (Wrong Filenames according Till's naming convention) :
 =======================================
